--- a/src/globals.css
+++ b/src/globals.css
@@ -95,11 +95,11 @@
   @keyframes dialogContentShow {
     from {
       opacity: 0;
-      transform: translate(-50%, -45%) scale(0.95);
+      transform: scale(0.95);
     }
     to {
       opacity: 1;
-      transform: translate(-50%, -50%) scale(1);
+      transform: scale(1);
     }
   }
   @keyframes drawerSlideLeftAndFade {
